Stop the dialogs being squashed

--- a/files/app/resource/css/admin.css
+++ b/files/app/resource/css/admin.css
@@ -26,12 +26,14 @@
     display: flex;
     flex-direction: column;
     width: 520px;
+    min-width: 520px;
     flex: 1;
     color: var(--ctrl-modal-fg-color);
 }
 #ctrl-modal .dialog.wide
 {
     width: 720px;
+    min-width: 720px;
 }
 #ctrl-modal .dialog > div:first-child
 {
